# human-pose-ROS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
cfg/: pose.cfg
launch/: ar_test.launch  openpifpaf.launch  openpifpaf_webcam.launch
msg/: Limbs.msg  PoseEstimation.msg  Skeleton.msg
plots/: corona.xml  kalman.xml  kalman_filter.xml  pose_filtering.xml  right_wrist_vel.xml  safety.xml  safety_test.xml
src/: ros_transform.py  visualize_skeletons.py
src/eval/: kp_mappings.py  meta.json  openpifpaf_vs_supervisely.py  predictions_vs_supervisely.py  random_pose.py  requirements.txt  wrist_cam_1600951613.png.json
src/eval/fastpose-drnoodle/: wrist_cam_1600951442-0.5.png.predictions.json  wrist_cam_1600951442.png.predictions.json  wrist_cam_1600951547.png.predictions.json  wrist_cam_1600951580-0.5.png.predictions.json  wrist_cam_1600951613-0.5.png.predictions.json  wrist_cam_1600951635.png.predictions.json  wrist_cam_1600951722.png.predictions.json  wrist_cam_1601296072.png.predictions.json  wrist_cam_1601296074.png.predictions.json  wrist_cam_1601296112.png.predictions.json  wrist_cam_1601296115-0.5.png.predictions.json  wrist_cam_1601296140.png.predictions.json  wrist_cam_1601296173.png.predictions.json  wrist_cam_1601296175.png.predictions.json  wrist_cam_1601296180.png.predictions.json  wrist_cam_1601296182-0.5.png.predictions.json  wrist_cam_1601296182.png.predictions.json  wrist_cam_1601296196.png.predictions.json  wrist_cam_1601296199.png.predictions.json  wrist_cam_1601296217.png.predictions.json  wrist_cam_1601296235-0.5.png.predictions.json  wrist_cam_1601296305.png.predictions.json  wrist_cam_1601296320.png.predictions.json  wrist_cam_1601296322.png.predictions.json  wrist_cam_1601296326.png.predictions.json  wrist_cam_1601296334-0.5.png.predictions.json  wrist_cam_1601296334.png.predictions.json  wrist_cam_1601296336.png.predictions.json  wrist_cam_1601296340.png.predictions.json  wrist_cam_1601296346.png.predictions.json  wrist_cam_1601296363.png.predictions.json  wrist_cam_1601296366.png.predictions.json  wrist_cam_1601296372.png.predictions.json  wrist_cam_1601296378-0.5.png.predictions.json  wrist_cam_1601296378.png.predictions.json  wrist_cam_1601296379.png.predictions.json  wrist_cam_1601296404-0.5.png.predictions.json  wrist_cam_1601296404.png.predictions.json  wrist_cam_1601296406-0.5.png.predictions.json  wrist_cam_1601296406.png.predictions.json  (+5 more)
src/eval/fastpose-zexinchen/: predictions-0.5.png.predictions.json  wrist_cam_1600951442-0.5.png.predictions.json  wrist_cam_1600951442.png.predictions.json  wrist_cam_1600951547-0.5.png.predictions.json  wrist_cam_1600951547.png.predictions.json  wrist_cam_1600951580-0.5.png.predictions.json  wrist_cam_1600951580.png.predictions.json  wrist_cam_1600951613-0.5.png.predictions.json  wrist_cam_1600951613.png.predictions.json  wrist_cam_1600951613.png.predictions.png.predictions.json  wrist_cam_1600951635-0.5.png.predictions.json  wrist_cam_1600951635.png.predictions.json  wrist_cam_1600951722-0.5.png.predictions.json  wrist_cam_1600951722.png.predictions.json  wrist_cam_1601296109-0.5.png.predictions.json  wrist_cam_1601296109.png.predictions.json  wrist_cam_1601296110-0.5.png.predictions.json  wrist_cam_1601296110.png.predictions.json  wrist_cam_1601296112-0.5.png.predictions.json  wrist_cam_1601296112.png.predictions.json  wrist_cam_1601296114-0.5.png.predictions.json  wrist_cam_1601296114.png.predictions.json  wrist_cam_1601296115-0.5.png.predictions.json  wrist_cam_1601296115.png.predictions.json  wrist_cam_1601296140-0.5.png.predictions.json  wrist_cam_1601296140.png.predictions.json  wrist_cam_1601296173-0.5.png.predictions.json  wrist_cam_1601296173.png.predictions.json  wrist_cam_1601296175-0.5.png.predictions.json  wrist_cam_1601296175.png.predictions.json  wrist_cam_1601296179-0.5.png.predictions.json  wrist_cam_1601296179.png.predictions.json  wrist_cam_1601296180-0.5.png.predictions.json  wrist_cam_1601296180.png.predictions.json  wrist_cam_1601296182-0.5.png.predictions.json  wrist_cam_1601296182.png.predictions.json  wrist_cam_1601296187-0.5.png.predictions.json  wrist_cam_1601296187.png.predictions.json  wrist_cam_1601296196-0.5.png.predictions.json  wrist_cam_1601296196.png.predictions.json  (+58 more)
src/eval/openpifpaf/: wrist_cam_1600951442-0.1.png.predictions.json  wrist_cam_1600951442-0.2.png.predictions.json  wrist_cam_1600951442-0.3.png.predictions.json  wrist_cam_1600951442-0.4.png.predictions.json  wrist_cam_1600951442-0.5.png.predictions.json  wrist_cam_1600951442-0.6.png.predictions.json  (+466 more)
src/intel_pose/: CMakeLists.txt  cpp_realsense.cpp  cpp_webcam.cpp  cpp_webcam_copy.cpp  estimate-keypoints.py  intel_confgi.rviz  ros_realsense_track.cpp  samples.h
src/open_pose/: openpose.py  openpose_demo.py
src/openpifpaf/: install.md  openpifpaf_demo.py  openpifpaf_predict_imgs.py  openpifpaf_ros.py
src/pose_utils/: ar_test.py  ar_tracker.py  distribution_plots.m  fake_pose_markers.py  filter_skeletons.py  get_centroid.py  get_image.py  get_image_continuous.py  get_limbs.py  get_ref_angle.py  ros_transform.py  save_joints.py  save_to_txt.py  utils.py  visualize_skeletons.py
test/: persondetection_eval.py
(+1703 files in other folders)
